load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//bazel:canisters.bzl", "rust_canister")

package(default_visibility = ["//visibility:public"])

DEPENDENCIES = [
    "@crate_index//:candid",
    "@crate_index//:ciborium",
    "@crate_index//:hex",
    "@crate_index//:ic0",
    "@crate_index//:ic-canister-log",
    "@crate_index//:ic-base-types",
    "@crate_index//:ic-cdk",
    "@crate_index//:ic-canisters-http-types",
    "@crate_index//:icp-ledger",
    "@crate_index//:icrc-ledger-types",
    "@crate_index//:icrc-ledger-client-cdk",
    "@crate_index//:ic-sns-governance",
    "@crate_index//:ic-metrics-encoder",
    "@crate_index//:ic-nervous-system-common",
    "@crate_index//:ic-stable-structures",
    "@crate_index//:minicbor",
    "@crate_index//:scopeguard",
    "@crate_index//:serde",
    "@crate_index//:serde_bytes",
    "@crate_index//:serde_cbor",
    "@crate_index//:serde_json",
    "@crate_index//:sha2",
]

PROC_MACRO_DEPENDENCIES = [
    "@crate_index//:async-trait",
    "@crate_index//:ic-cdk-macros",
    "@crate_index//:minicbor-derive",
    "@crate_index//:rust_decimal_macros",
    "@crate_index//:strum_macros",
]

DEV_DEPENDENCIES = [
    "@crate_index//:candid_parser",
]

rust_library(
    name = "lib",
    srcs = glob([
        "src/**/*.rs",
    ]),
    crate_name = "sns_module",
    proc_macro_deps = PROC_MACRO_DEPENDENCIES,
    deps = DEPENDENCIES,
)

rust_test(
    name = "test-main",
    srcs = glob([
        "src/main.rs",
    ]),
    data = ["//sns_module:candid"],
    env = {
        "SNS_MODULE_CANDID_PATH": "$(rootpath //sns_module:candid)",
    },
    proc_macro_deps = PROC_MACRO_DEPENDENCIES,
    deps = DEPENDENCIES + DEV_DEPENDENCIES + [":lib"],
)

filegroup(
    name = "candid",
    srcs = ["sns_module.did"],
)

rust_test(
    name = "tests",
    srcs = glob([
        "src/**/*.rs",
    ]),
    crate_name = "sns_module",
    data = [],
    env = {},
    proc_macro_deps = PROC_MACRO_DEPENDENCIES,
    tags = ["requires-network"],
    deps = DEPENDENCIES + DEV_DEPENDENCIES + [":lib"],
)