load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//bazel:canisters.bzl", "rust_canister")

package(default_visibility = ["//visibility:public"])

DEPENDENCIES = [
    "@crate_index//:candid",
    "@crate_index//:ciborium",
    "@crate_index//:hex",
    "@crate_index//:ic0",
    "@crate_index//:ic-canister-log",
    "@crate_index//:ic-base-types",
    "@crate_index//:ic-cdk",
    "@crate_index//:ic-canisters-http-types",
    "@crate_index//:icp-ledger",
    "@crate_index//:icrc-ledger-types",
    "@crate_index//:icrc-ledger-client-cdk",
    "@crate_index//:ic-sns-governance",
    "@crate_index//:ic-metrics-encoder",
    "@crate_index//:ic-stable-structures",
    "@crate_index//:minicbor",
    "@crate_index//:scopeguard",
    "@crate_index//:serde",
    "@crate_index//:serde_bytes",
    "@crate_index//:serde_cbor",
    "@crate_index//:serde_json",
    "@crate_index//:sha2",
]

PROC_MACRO_DEPENDENCIES = [
    "@crate_index//:async-trait",
    "@crate_index//:ic-cdk-macros",
    "@crate_index//:minicbor-derive",
    "@crate_index//:rust_decimal_macros",
    "@crate_index//:strum_macros",
]

DEV_DEPENDENCIES = [
    "@crate_index//:assert_matches",
    "@crate_index//:candid_parser",
    "@crate_index//:ic-icrc1-ledger",
    "@crate_index//:ic-state-machine-tests",
]

rust_library(
    name = "lib",
    srcs = glob([
        "src/**/*.rs",
    ]),
    crate_name = "sns_module",
    proc_macro_deps = PROC_MACRO_DEPENDENCIES,
    deps = DEPENDENCIES,
)

filegroup(
    name = "candid",
    srcs = ["sns_module.did"],
)

rust_canister(
    name = "canister",
    srcs = glob([
        "src/**/*.rs",
    ]),
    crate_features = [],
    proc_macro_deps = PROC_MACRO_DEPENDENCIES,
    service_file = "sns_module.did",
    deps = DEPENDENCIES + [":lib"],
)

rust_test(
    name = "test-main",
    srcs = glob([
        "src/main.rs",
    ]),
    data = ["//sns_module:candid"],
    env = {
        "SNS_MODULE_CANDID_PATH": "$(rootpath //sns_module:candid)",
    },
    proc_macro_deps = PROC_MACRO_DEPENDENCIES,
    deps = DEPENDENCIES + DEV_DEPENDENCIES + [":lib"],
)

rust_test(
    name = "tests",
    srcs = glob([
        "src/**/*.rs",
    ]),
    crate_name = "sns_module",
    data = [
        "//sns_module:canister",
        "@ic-icrc1-ledger-canister//:wasm",
        "@ledger-canister//:wasm",
    ],
    env = {
        "IC_ICRC1_LEDGER_WASM_PATH": "$(rootpath @ic-icrc1-ledger-canister//:wasm)",
        "LEDGER_CANISTER_WASM_PATH": "$(rootpath @ledger-canister//:wasm)",
        "SNS_MODULE_CANISTER_WASM_PATH": "$(rootpath //sns_module:canister)",
    },
    proc_macro_deps = PROC_MACRO_DEPENDENCIES,
    tags = ["requires-network"],
    deps = DEPENDENCIES + DEV_DEPENDENCIES + [":lib"],
)
