[package]
name = "sns_module"
version.workspace = true
edition.workspace = true

[lib]
name = "sns_module"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sns_module"
path = "src/main.rs"


[features]
default = []
self_check = []

[dependencies]
ic-management-canister-types.workspace = true
candid.workspace = true
ciborium.workspace = true
hex.workspace = true
ic0.workspace = true
ic-canister-log.workspace = true
ic-base-types.workspace = true
ic-cdk.workspace = true
ic-canisters-http-types.workspace = true
icp-ledger.workspace = true
icrc-ledger-types.workspace = true
icrc-ledger-client-cdk.workspace = true
ic-sns-governance.workspace = true
ic-metrics-encoder.workspace = true
ic-stable-structures.workspace = true
minicbor.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
sha2.workspace = true

# Proc-macro dependencies
async-trait.workspace = true
ic-cdk-macros.workspace = true
minicbor-derive.workspace = true
rust_decimal_macros.workspace = true
strum_macros.workspace = true

[dev-dependencies]
assert_matches.workspace = true
candid_parser.workspace = true
ic-icrc1-ledger.workspace = true
ic-state-machine-tests.workspace = true
