load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//bazel:canisters.bzl", "rust_canister")

package(default_visibility = ["//visibility:public"])

DEPENDENCIES = [
    "@crate_index//:candid",
    "@crate_index//:ciborium",
    "@crate_index//:hex",
    "@crate_index//:ic0",
    "@crate_index//:ic-canister-log",
    "@crate_index//:ic-cdk",
    "@crate_index//:ic-canisters-http-types",
    "@crate_index//:icp-ledger",
    "@crate_index//:icrc-ledger-types",
    "@crate_index//:icrc-ledger-client-cdk",
    "@crate_index//:ic-sns-governance",
    "@crate_index//:ic-metrics-encoder",
    "@crate_index//:ic-stable-structures",
    "@crate_index//:ic-utils-ensure",
    "@crate_index//:minicbor",
    "@crate_index//:rust_decimal",
    "@crate_index//:scopeguard",
    "@crate_index//:serde",
    "@crate_index//:serde_bytes",
    "@crate_index//:serde_cbor",
    "@crate_index//:serde_json",
    "@crate_index//:sha2",
    "@crate_index//:strum",
]

PROC_MACRO_DEPENDENCIES = [
    "@crate_index//:async-trait",
    "@crate_index//:ic-cdk-macros",
    "@crate_index//:minicbor-derive",
    "@crate_index//:rust_decimal_macros",
    "@crate_index//:strum_macros",
]

DEV_DEPENDENCIES = [
    "@crate_index//:assert_matches",
    "@crate_index//:candid_parser",
    "@crate_index//:cycles-minting-canister",
    "@crate_index//:ic-icrc1-ledger",
    "@crate_index//:ic-nns-constants",
    "@crate_index//:ic-state-machine-tests",
    "@crate_index//:ic-nns-governance",
    "@crate_index//:ic-sns-init",
    "@crate_index//:ic-sns-root",
    "@crate_index//:ic-sns-swap",
    "@crate_index//:lazy_static",
    "@crate_index//:mockall",
    "@crate_index//:num-bigint",
    "@crate_index//:num-traits",
    "@crate_index//:proptest",
    "@crate_index//:prost",
    "@crate_index//:tokio",
]

rust_library(
    name = "lib",
    srcs = glob([
        "src/**/*.rs",
    ]),
    crate_name = "water_neuron",
    proc_macro_deps = PROC_MACRO_DEPENDENCIES,
    deps = DEPENDENCIES,
)

rust_test(
    name = "tests",
    srcs = glob([
        "src/**/*.rs",
    ]),
    crate_name = "water_neuron",
    data = [
        "//water_neuron:canister",
        "@cycles-minting-canister//:wasm",
        "@governance-canister//:wasm",
        "@ic-icrc1-ledger-canister//:wasm",
        "@ledger-canister//:wasm",
        "@sns-governance-canister//:wasm",
        "@sns-root-canister//:wasm",
        "@sns-swap-canister//:wasm",
    ],
    env = {
        "IC_ICRC1_LEDGER_WASM_PATH": "$(rootpath @ic-icrc1-ledger-canister//:wasm)",
        "LEDGER_CANISTER_WASM_PATH": "$(rootpath @ledger-canister//:wasm)",
        "CYCLES_MINTING_CANISTER_WASM_PATH": "$(rootpath @cycles-minting-canister//:wasm)",
        "GOVERNANCE_CANISTER_WASM_PATH": "$(rootpath @governance-canister//:wasm)",
        "SNS_ROOT_CANISTER_WASM_PATH": "$(rootpath @sns-root-canister//:wasm)",
        "SNS_GOVERNANCE_CANISTER_WASM_PATH": "$(rootpath @sns-governance-canister//:wasm)",
        "SNS_SWAP_CANISTER_WASM_PATH": "$(rootpath @sns-swap-canister//:wasm)",
        "WATER_NEURON_CANISTER_WASM_PATH": "$(rootpath //water_neuron:canister)",
    },
    proc_macro_deps = PROC_MACRO_DEPENDENCIES,
    tags = ["requires-network"],
    deps = DEPENDENCIES + DEV_DEPENDENCIES + [":lib"],
)

rust_canister(
    name = "canister",
    srcs = glob([
        "src/**/*.rs",
    ]),
    proc_macro_deps = PROC_MACRO_DEPENDENCIES,
    deps = DEPENDENCIES + [":lib"],
)

filegroup(
    name = "candid",
    srcs = ["water_neuron.did"],
)
