[package]
name = "water-neuron"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "water-neuron"
path = "src/main.rs"

[features]
self_check = []

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.80"
candid = { workspace = true }
ciborium = "0.2.2"
hex = "0.4.3"
ic0 = "0.21.1"
ic-canister-log = "0.2.0"
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic.git", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
icp-ledger = { git = "https://github.com/dfinity/ic/", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic/", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic/", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
ic-sns-governance = { git = "https://github.com/dfinity/ic/", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
ic-metrics-encoder = "1.1.1"
ic-stable-structures = "0.6.3"
ic-utils-ensure = { git = "https://github.com/dfinity/ic/", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
minicbor = { version = "0.24.0", features = ["alloc", "derive"] }
minicbor-derive = "0.15.0"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
scopeguard = "1.2.0"
serde = "1.0.198"
serde_bytes = "0.11.14"
serde_cbor = "0.11.2"
serde_json = "1.0.116"
sha2 = "0.10.8"
strum = "0.26.2"
strum_macros = "0.26.2"

[dev-dependencies]
assert_matches = "1.3.0"
candid_parser = "0.1.4"
cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
hex = "0.4.3"
lazy_static = "1.4.0"
mockall = "0.12.1"
num-bigint = "0.4.4"
num-traits = "0.2.18"
ic-icrc1-ledger = { git = "https://github.com/dfinity/ic.git", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
ic-sns-init = { git = "https://github.com/dfinity/ic.git", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
ic-sns-root = { git = "https://github.com/dfinity/ic.git", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
ic-sns-swap = { git = "https://github.com/dfinity/ic.git", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
ic-state-machine-tests = { git = "https://github.com/dfinity/ic.git", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
proptest = "1.4.0"
prost = "0.12.3"
tokio = "1.36.0"