load("@rules_rust//rust:defs.bzl", "rust_binary")

DEPENDENCIES = [
    "@crate_index//:log",
    "@crate_index//:env_logger",
    "@crate_index//:clap",
    "@crate_index//:ic-agent",
    "@crate_index//:candid",
    "@crate_index//:serde",
    "@crate_index//:tokio",
    "@crate_index//:serde_bytes",
    "@crate_index//:ic-cdk",
    "@crate_index//:hex",
    "@crate_index//:sha2",
    "@crate_index//:thiserror",
    "@crate_index//:regex",
]

rust_binary(
    name = "bin",
    srcs = glob([
        "src/**/*.rs",
    ]),
    data = [
        "@ic-icrc1-ledger//:ic-icrc1-ledger.wasm.gz",
    ],
    env = {
        "WASM_PATH": "$(rootpath @ic-icrc1-ledger//:ic-icrc1-ledger.wasm.gz)",
    },
    deps = DEPENDENCIES,
)
