load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

DEPENDENCIES = [
    "@crate_index//:log",
    "@crate_index//:env_logger",
    "@crate_index//:clap",
    "@crate_index//:ic-agent",
    "@crate_index//:candid",
    "@crate_index//:serde",
    "@crate_index//:tokio",
    "@crate_index//:serde_bytes",
    "@crate_index//:ic-cdk",
    "@crate_index//:hex",
    "@crate_index//:sha2",
    "@crate_index//:thiserror",
    "@crate_index//:regex",
]

rust_binary(
    name = "bin",
    srcs = glob([
        "src/**/*.rs",
    ]),
    data = [
        "//water_neuron:candid",
        "//water_neuron:canister_gz",
        "@candid//:didc",
        "@cycles-minting-candid//:candid",
        "@cycles-minting-canister//:wasm",
        "@governance-candid//:candid",
        "@governance-canister//:wasm",
        "@ic-icrc1-index-ng-candid//:candid",
        "@ic-icrc1-index-ng-canister//:wasm",
        "@ic-icrc1-ledger-candid//:candid",
        "@ic-icrc1-ledger-canister//:wasm",
        "@ledger-candid//:candid",
        "@ledger-canister//:wasm",
        "@sns-governance-candid//:candid",
        "@sns-governance-canister//:wasm",
        "@sns-root-candid//:candid",
        "@sns-root-canister//:wasm",
        "@sns-swap-candid//:candid",
        "@sns-swap-canister//:wasm",
        "@sns-wasm-candid//:candid",
        "@sns-wasm-canister//:wasm",
    ],
    env = {
        "IC_ICRC1_LEDGER_WASM_PATH": "$(rootpath @ic-icrc1-ledger-canister//:wasm)",
        "IC_ICRC1_LEDGER_CANDID_PATH": "$(rootpath @ic-icrc1-ledger-candid//:candid)",
        "LEDGER_CANISTER_WASM_PATH": "$(rootpath @ledger-canister//:wasm)",
        "LEDGER_CANISTER_CANDID_PATH": "$(rootpath @ledger-candid//:candid)",
        "CYCLES_MINTING_CANISTER_WASM_PATH": "$(rootpath @cycles-minting-canister//:wasm)",
        "CYCLES_MINTING_CANISTER_CANDID_PATH": "$(rootpath @cycles-minting-candid//:candid)",
        "SNS_GOVERNANCE_CANISTER_WASM_PATH": "$(rootpath @sns-governance-canister//:wasm)",
        "SNS_GOVERNANCE_CANISTER_CANDID_PATH": "$(rootpath @sns-governance-candid//:candid)",
        "SNS_SWAP_CANISTER_WASM_PATH": "$(rootpath @sns-swap-canister//:wasm)",
        "SNS_SWAP_CANISTER_CANDID_PATH": "$(rootpath @sns-swap-candid//:candid)",
        "SNS_WASM_CANISTER_PATH": "$(rootpath @sns-wasm-canister//:wasm)",
        "SNS_WASM_CANISTER_CANDID_PATH": "$(rootpath @sns-wasm-candid//:candid)",
        "SNS_ROOT_CANISTER_WASM_PATH": "$(rootpath @sns-root-canister//:wasm)",
        "SNS_ROOT_CANISTER_CANDID_PATH": "$(rootpath @sns-root-candid//:candid)",
        "GOVERNANCE_CANISTER_WASM_PATH": "$(rootpath @governance-canister//:wasm)",
        "GOVERNANCE_CANISTER_CANDID_PATH": "$(rootpath @governance-candid//:candid)",
        "IC_ICRC1_INDEX_WASM_PATH": "$(rootpath @ic-icrc1-index-ng-canister//:wasm)",
        "IC_ICRC1_INDEX_CANDID_PATH": "$(rootpath @ic-icrc1-index-ng-candid//:candid)",
        "WATER_NEURON_CANISTER_WASM_PATH": "$(rootpath //water_neuron:canister_gz)",
        "WATER_NEURON_CANISTER_CANDID_PATH": "$(rootpath //water_neuron:candid)",
        "CANDID_DIDC_PATH": "$(rootpath @candid//:didc)",
    },
    deps = DEPENDENCIES,
)
